Latest build of target web.

--- a/knowl/p-299.html
+++ b/knowl/p-299.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Find a finite set of vectors that generates each of the following vector spaces (be sure to show why your set works):</p>
+<p>For what value(s) of <span class="process-math">\(\alpha\)</span> and <span class="process-math">\(\beta\)</span> is <span class="process-math">\(\vec{p}=\colvec{\beta\\ -2\\ \alpha\\ -4}\)</span> a solution to <span class="process-math">\(A \vec{x}=\vec{b}\)</span> if <span class="process-math">\(A = \begin{bmatrix} 1\amp 5\amp -2\amp 0 \\ -3\amp 1\amp 9\amp -5 \\ 4\amp -8\amp -1\amp 7 \end{bmatrix}\)</span> and <span class="process-math">\(\vec{b}=\colvec{-7\\ 9\\ 0}\text{?}\)</span></p>
 <span class="incontext"><a href="section-12.html#p-299" class="internal">in-context</a></span>
 </body>
 </html>
