--- a/knowl/p-306.html
+++ b/knowl/p-306.html
@@ -12,7 +12,8 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Geometrically describe the span of <span class="process-math">\(\left\{ \colvec{2\\ 1\\ 4} , \colvec{3\\ -1\\ 1} \right\} \text{.}\)</span></p>
+<p>Show that the set <span class="process-math">\(\{
+1+t,t+t^2,1+t^3,t+t^2+t^3 \}\)</span> spans all of <span class="process-math">\(\mathbb{P}_3\text{.}\)</span></p>
 <span class="incontext"><a href="section-12.html#p-306" class="internal">in-context</a></span>
 </body>
 </html>
