--- a/knowl/p-308.html
+++ b/knowl/p-308.html
@@ -12,9 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Does the span of <span class="process-math">\(\left\{
-\vec{v_1},...,\vec{v_k} \right\} \)</span> where <span class="process-math">\(\vec{v_i} \in
-\mathbb{R}^n\)</span> have to go through the origin?</p>
+<p>Geometrically describe the span of <span class="process-math">\(\left\{ \colvec{2\\ 1\\ 4} \right\} \text{.}\)</span></p>
 <span class="incontext"><a href="section-12.html#p-308" class="internal">in-context</a></span>
 </body>
 </html>
