--- a/knowl/p-315.html
+++ b/knowl/p-315.html
@@ -12,7 +12,8 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Is <span class="process-math">\(\{ 2+t^2, 1+t^2 \}\)</span> a linearly dependent set in <span class="process-math">\(\mathbb{P}_2\text{?}\)</span></p>
+<p>Is the set <span class="process-math">\(\left\{\colvec{2\\ 3\\ 0},
+\colvec{-1\\ -1\\ 2} \right\}\)</span> linearly independent?</p>
 <span class="incontext"><a href="section-13.html#p-315" class="internal">in-context</a></span>
 </body>
 </html>
