--- a/knowl/p-320.html
+++ b/knowl/p-320.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>If <span class="process-math">\(M=\{ \vec{v_1},\vec{v_2},...,\vec{v_n}\}\)</span> is linearly independent, then any subset of <span class="process-math">\(M\)</span> is linearly independent.</p>
+<p>Prove that <span class="process-math">\(\{ 1+t,t+t^2,1+t^2 \}\)</span> is linearly independent.</p>
 <span class="incontext"><a href="section-13.html#p-320" class="internal">in-context</a></span>
 </body>
 </html>
