--- a/knowl/p-328.html
+++ b/knowl/p-328.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Is <span class="process-math">\(\mathbb{R}\)</span> a subspace of <span class="process-math">\(\mathbb{C}\text{?}\)</span> Why or why not?</p>
-<span class="incontext"><a href="section-11.html#p-275" class="internal">in-context</a></span>
+<p>If <span class="process-math">\(S\)</span> is a linearly independent set, then any <span class="process-math">\(\vec{w} \in span(S)\)</span> can be written as a linear combination from <span class="process-math">\(S\)</span> in only one way.</p>
+<span class="incontext"><a href="section-13.html#p-328" class="internal">in-context</a></span>
 </body>
 </html>
