--- a/knowl/investigation-68.html
+++ b/knowl/investigation-68.html
@@ -14,6 +14,7 @@
 <article class="investigation project-like"><h3 class="heading">
 <span class="type">Question</span><span class="space"> </span><span class="codenumber">3.15</span><span class="period">.</span>
 </h3>
-<p>Prove or disprove: The set of odd functions on <span class="process-math">\(\mathbb{R}\)</span> (i.e., those for which <span class="process-math">\(f(-t)=-f(t)\)</span> for every <span class="process-math">\(t \in \mathbb{R}\)</span>) a subspace of <span class="process-math">\(F(\mathbb{R},\mathbb{R})\text{.}\)</span></p></article><span class="incontext"><a href="section-11.html#investigation-68" class="internal">in-context</a></span>
+<p>Prove or disprove: The set of odd functions on <span class="process-math">\(\mathbb{R}\)</span> (i.e., those for which <span class="process-math">\(f(-t)=-f(t)\)</span> for every <span class="process-math">\(t \in \mathbb{R}\)</span>) a subspace of <span class="process-math">\(F(\mathbb{R},\mathbb{R})\text{.}\)</span></p>
+<div class="solutions"><a href="" class="solution-knowl original" data-knowl="./knowl/solution-6-hidden.html" title="Solution 3.15.1"><span class="type">Solution</span><span class="period">.</span></a></div></article><span class="incontext"><a href="section-11.html#investigation-68" class="internal">in-context</a></span>
 </body>
 </html>
