--- a/knowl/li-71.html
+++ b/knowl/li-71.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Is <span class="process-math">\(\mathbb{R}\)</span> a subspace of <span class="process-math">\(\mathbb{C}\text{?}\)</span> Why or why not?</p>
-<span class="incontext"><a href="section-11.html#p-275" class="internal">in-context</a></span>
+<article class="li"><h4 class="heading">
+<span class="type">Item</span><span class="space"> </span><span class="codenumber">7</span><span class="period">.</span>
+</h4>Since <span class="process-math">\(H\subseteq V\)</span> and this axiom holds for all elements of <span class="process-math">\(V\text{,}\)</span> the axiom holds when restricted to elements of <span class="process-math">\(H\text{.}\)</span></article><span class="incontext"><a href="section-11.html#li-71" class="internal">in-context</a></span>
 </body>
 </html>
