--- a/knowl/p-273.html
+++ b/knowl/p-273.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Is <span class="process-math">\(\mathbb{R}\)</span> a subspace of <span class="process-math">\(\mathbb{C}\text{?}\)</span> Why or why not?</p>
+<h3 class="heading"><span class="type">Paragraph</span></h3>
+<p>This theorem is so useful because we can prove a set is a vector space by checking only <em class="emphasis">three</em> properties instead of the <em class="emphasis">ten</em> that are involved in the definition. The reason that we do not need to check these other properties is that by using this subspace, we already have proven the proper rules of arithmetic from the parent space. Additionally, since we are using the same rules for scalar multiplication and vector addition as the parent space, we <em class="emphasis">must</em> also have the same scalars as the parent space.</p>
 <span class="incontext"><a href="section-11.html#p-273" class="internal">in-context</a></span>
 </body>
 </html>
