--- a/knowl/p-274.html
+++ b/knowl/p-274.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Is <span class="process-math">\(\mathbb{R}^2\)</span> a subspace of <span class="process-math">\(\mathbb{R}^3\text{?}\)</span> Why or why not?</p>
+<p>Use the preceding theorem to prove that <span class="process-math">\(\mathbb{P}_n\)</span> is a subspace of <span class="process-math">\(\mathbb{P}\text{.}\)</span></p>
 <span class="incontext"><a href="section-11.html#p-274" class="internal">in-context</a></span>
 </body>
 </html>
