--- a/knowl/p-276.html
+++ b/knowl/p-276.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Is the set of points on the plane given by <span class="process-math">\(z=1\)</span> a subspace of <span class="process-math">\(\mathbb{R}^3\text{?}\)</span> Why or why not?</p>
+<p>Is <span class="process-math">\(\mathbb{R}^2\)</span> a subspace of <span class="process-math">\(\mathbb{R}^3\text{?}\)</span> Why or why not?</p>
 <span class="incontext"><a href="section-11.html#p-276" class="internal">in-context</a></span>
 </body>
 </html>
