--- a/knowl/p-279.html
+++ b/knowl/p-279.html
@@ -12,7 +12,9 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Prove or disprove: The set of odd functions on <span class="process-math">\(\mathbb{R}\)</span> (i.e., those for which <span class="process-math">\(f(-t)=-f(t)\)</span> for every <span class="process-math">\(t \in \mathbb{R}\)</span>) a subspace of <span class="process-math">\(F(\mathbb{R},\mathbb{R})\text{.}\)</span></p>
+<p>Draw a plot of the points in <span class="process-math">\(\mathbb{R}^2\)</span> given by <span class="process-math">\(\{ \vec{x}=\colvec{x_1\\ x_2} \in
+\mathbb{R}^2 \mid x_1 x_2 \geq 0\}\text{.}\)</span> Is <span class="process-math">\(\{ \vec{x}=\colvec{x_1\\
+x_2} \in \mathbb{R}^2 \mid x_1 x_2 \geq 0\}\)</span> a subspace of <span class="process-math">\(\mathbb{R}^2\text{?}\)</span> Why or why not?</p>
 <span class="incontext"><a href="section-11.html#p-279" class="internal">in-context</a></span>
 </body>
 </html>
