--- a/knowl/p-280.html
+++ b/knowl/p-280.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>If <span class="process-math">\(A\)</span> is a <span class="process-math">\(m\)</span> by <span class="process-math">\(n\)</span> matrix, the solution set to the homogeneous equation <span class="process-math">\(A\vec{x}=\vec{0}\)</span> is a subspace of <span class="process-math">\(\mathbb{R}^n\text{.}\)</span></p>
+<p>Is <span class="process-math">\(Sym_{n \times n}\text{,}\)</span> the set of symmetric <span class="process-math">\(n\)</span> by <span class="process-math">\(n\)</span> matrices a subspace of <span class="process-math">\(M_{n \times n}\text{?}\)</span> Why or why not?</p>
 <span class="incontext"><a href="section-11.html#p-280" class="internal">in-context</a></span>
 </body>
 </html>
