--- a/knowl/p-281.html
+++ b/knowl/p-281.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>If <span class="process-math">\(H\)</span> and <span class="process-math">\(K\)</span> are subspaces of some vector space <span class="process-math">\(V\text{,}\)</span> then the set <span class="process-math">\(H \cap K\)</span> is a subspace of <span class="process-math">\(V\)</span> as well.</p>
+<p>Prove or disprove: The set of odd functions on <span class="process-math">\(\mathbb{R}\)</span> (i.e., those for which <span class="process-math">\(f(-t)=-f(t)\)</span> for every <span class="process-math">\(t \in \mathbb{R}\)</span>) a subspace of <span class="process-math">\(F(\mathbb{R},\mathbb{R})\text{.}\)</span></p>
 <span class="incontext"><a href="section-11.html#p-281" class="internal">in-context</a></span>
 </body>
 </html>
