--- a/knowl/p-283.html
+++ b/knowl/p-283.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Prove or Disprove: the set of matrices of the form <span class="process-math">\(\begin{bmatrix} a \amp b \\0 \amp -a \end{bmatrix}\)</span> is a subspace of <span class="process-math">\(M_{2 \times 2}\text{.}\)</span></p>
+<p>If <span class="process-math">\(A\)</span> is a <span class="process-math">\(m\)</span> by <span class="process-math">\(n\)</span> matrix, the solution set to the homogeneous equation <span class="process-math">\(A\vec{x}=\vec{0}\)</span> is a subspace of <span class="process-math">\(\mathbb{R}^n\text{.}\)</span></p>
 <span class="incontext"><a href="section-11.html#p-283" class="internal">in-context</a></span>
 </body>
 </html>
