--- a/knowl/p-284.html
+++ b/knowl/p-284.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Prove or disprove: The set of quadratic polynomials of the form <span class="process-math">\(at^2+b\)</span> is a subspace of the vector space of polynomials.</p>
+<p>If <span class="process-math">\(H\)</span> and <span class="process-math">\(K\)</span> are subspaces of some vector space <span class="process-math">\(V\text{,}\)</span> then the set <span class="process-math">\(H \cap K\)</span> is a subspace of <span class="process-math">\(V\)</span> as well.</p>
 <span class="incontext"><a href="section-11.html#p-284" class="internal">in-context</a></span>
 </body>
 </html>
