--- a/knowl/p-285.html
+++ b/knowl/p-285.html
@@ -11,14 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h3 class="heading"><span class="type">Paragraph</span></h3>
-<p>Recall that a <dfn class="terminology">linear combination</dfn> of the set <span class="process-math">\(\{\vec{v_1},..\vec{v_k} \}\)</span> is a vector of the form</p>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{equation*}
-\sum_{i=1}^k c_i \vec{v_i} = c_1 \vec{v_1} + c_2 \vec{v_2}+...+c_k \vec{v_k}\text{.}
-\end{equation*}
-</div>
-<p class="continuation">Note that some of the <span class="process-math">\(c_i\)</span> may be zero. In other words, not every vector in a set needs to be part of a linear combination from that set.</p>
-<span class="incontext"><a href="section-12.html#p-285" class="internal">in-context</a></span>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>Prove or Disprove: the set of <span class="process-math">\(2\)</span> by <span class="process-math">\(2\)</span> matrices with at least one zero entry is a subspace of <span class="process-math">\(M_{2 \times 2}\text{.}\)</span></p>
+<span class="incontext"><a href="section-11.html#p-285" class="internal">in-context</a></span>
 </body>
 </html>
