--- a/knowl/p-286.html
+++ b/knowl/p-286.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Find a way to  write <span class="process-math">\(\vec{b}=\colvec{2\\ 4}\)</span> as a linear combination of <span class="process-math">\(\vec{v_1}=\colvec{1\\ 1}\)</span> and <span class="process-math">\(\vec{v_2}=\colvec{-1\\ 1}\)</span> or explain why it is not possible to do so?</p>
-<span class="incontext"><a href="section-12.html#p-286" class="internal">in-context</a></span>
+<p>Prove or Disprove: the set of matrices of the form <span class="process-math">\(\begin{bmatrix} a \amp b \\0 \amp -a \end{bmatrix}\)</span> is a subspace of <span class="process-math">\(M_{2 \times 2}\text{.}\)</span></p>
+<span class="incontext"><a href="section-11.html#p-286" class="internal">in-context</a></span>
 </body>
 </html>
