--- a/knowl/p-287.html
+++ b/knowl/p-287.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Repeat the previous problem for <span class="process-math">\(\vec{b}=\colvec{0\\ 0}\text{,}\)</span> <span class="process-math">\(\vec{b}=\colvec{-1\\ 2}\text{,}\)</span> and <span class="process-math">\(\vec{b}=\colvec{2\\ 2}\text{.}\)</span></p>
-<span class="incontext"><a href="section-12.html#p-287" class="internal">in-context</a></span>
+<p>Prove or disprove: The set of quadratic polynomials of the form <span class="process-math">\(at^2+b\)</span> is a subspace of the vector space of polynomials.</p>
+<span class="incontext"><a href="section-11.html#p-287" class="internal">in-context</a></span>
 </body>
 </html>
