--- a/knowl/p-288.html
+++ b/knowl/p-288.html
@@ -11,8 +11,14 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Can you write <span class="process-math">\(2+4t\)</span> as a linear combination of <span class="process-math">\(1+t\)</span> and <span class="process-math">\(-1+t\text{?}\)</span></p>
+<h3 class="heading"><span class="type">Paragraph</span></h3>
+<p>Recall that a <dfn class="terminology">linear combination</dfn> of the set <span class="process-math">\(\{\vec{v_1},..\vec{v_k} \}\)</span> is a vector of the form</p>
+<div class="displaymath process-math" data-contains-math-knowls="">
+\begin{equation*}
+\sum_{i=1}^k c_i \vec{v_i} = c_1 \vec{v_1} + c_2 \vec{v_2}+...+c_k \vec{v_k}\text{.}
+\end{equation*}
+</div>
+<p class="continuation">Note that some of the <span class="process-math">\(c_i\)</span> may be zero. In other words, not every vector in a set needs to be part of a linear combination from that set.</p>
 <span class="incontext"><a href="section-12.html#p-288" class="internal">in-context</a></span>
 </body>
 </html>
