--- a/knowl/p-289.html
+++ b/knowl/p-289.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Can you write <span class="process-math">\(\begin{bmatrix} 2\amp 3 \\1\amp 1 \end{bmatrix}\)</span> as a linear combination of <span class="process-math">\(\begin{bmatrix} 1\amp 1 \\0\amp 1 \end{bmatrix}\)</span> and <span class="process-math">\(\begin{bmatrix} 1\amp 2 \\-1\amp 1 \end{bmatrix}\text{?}\)</span></p>
+<p>Find a way to  write <span class="process-math">\(\vec{b}=\colvec{2\\ 4}\)</span> as a linear combination of <span class="process-math">\(\vec{v_1}=\colvec{1\\ 1}\)</span> and <span class="process-math">\(\vec{v_2}=\colvec{-1\\ 1}\)</span> or explain why it is not possible to do so?</p>
 <span class="incontext"><a href="section-12.html#p-289" class="internal">in-context</a></span>
 </body>
 </html>
