--- a/knowl/p-290.html
+++ b/knowl/p-290.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h3 class="heading"><span class="type">Paragraph</span></h3>
-<p>The <dfn class="terminology">span</dfn> of a set of vectors <span class="process-math">\(S\text{,}\)</span> denoted <span class="process-math">\(span(S)\)</span> is the set of <em class="emphasis">all</em> possible linear combinations of <span class="process-math">\(S\text{.}\)</span> A set <span class="process-math">\(S\)</span> is said to <dfn class="terminology">span or generate a vector space</dfn> <span class="process-math">\(V\)</span> if <span class="process-math">\(span(S)=V\text{.}\)</span></p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>Repeat the previous problem for <span class="process-math">\(\vec{b}=\colvec{0\\ 0}\text{,}\)</span> <span class="process-math">\(\vec{b}=\colvec{-1\\ 2}\text{,}\)</span> and <span class="process-math">\(\vec{b}=\colvec{2\\ 2}\text{.}\)</span></p>
 <span class="incontext"><a href="section-12.html#p-290" class="internal">in-context</a></span>
 </body>
 </html>
