--- a/knowl/p-292.html
+++ b/knowl/p-292.html
@@ -12,9 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>If <span class="process-math">\(S=\left\{ \colvec{1\\ 1\\
-1},\colvec{1\\ -1\\ 1} \right\}\text{,}\)</span> is <span class="process-math">\(\vec{b}=\colvec{1\\ 2\\ 3}
-\in span(S)\text{?}\)</span></p>
+<p>Can you write <span class="process-math">\(\begin{bmatrix} 2\amp 3 \\1\amp 1 \end{bmatrix}\)</span> as a linear combination of <span class="process-math">\(\begin{bmatrix} 1\amp 1 \\0\amp 1 \end{bmatrix}\)</span> and <span class="process-math">\(\begin{bmatrix} 1\amp 2 \\-1\amp 1 \end{bmatrix}\text{?}\)</span></p>
 <span class="incontext"><a href="section-12.html#p-292" class="internal">in-context</a></span>
 </body>
 </html>
