--- a/knowl/p-294.html
+++ b/knowl/p-294.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>If <span class="process-math">\(S=\left\{ \colvec{1\\ 1\\ 1},\colvec{1\\ -1\\ 1},\colvec{1\\ -1\\ -1} \right\}\text{,}\)</span> is <span class="process-math">\(\vec{b}=\colvec{1\\ 2\\ 3} \in span(S)\text{?}\)</span></p>
+<p>If <span class="process-math">\(S=\left\{ \colvec{1\\ 1\\ 1},\colvec{1\\ -1\\ 1} \right\}\text{,}\)</span> is <span class="process-math">\(\vec{b}=\colvec{3\\ 1\\ 3} \in span(S)\text{?}\)</span></p>
 <span class="incontext"><a href="section-12.html#p-294" class="internal">in-context</a></span>
 </body>
 </html>
