--- a/knowl/p-295.html
+++ b/knowl/p-295.html
@@ -12,7 +12,9 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Is <span class="process-math">\(1-t^2\)</span> in the span of <span class="process-math">\(\{ 3, 4+t+t^2,5-t\}\text{?}\)</span></p>
+<p>If <span class="process-math">\(S=\left\{ \colvec{1\\ 1\\
+1},\colvec{1\\ -1\\ 1} \right\}\text{,}\)</span> is <span class="process-math">\(\vec{b}=\colvec{1\\ 2\\ 3}
+\in span(S)\text{?}\)</span></p>
 <span class="incontext"><a href="section-12.html#p-295" class="internal">in-context</a></span>
 </body>
 </html>
