--- a/knowl/p-297.html
+++ b/knowl/p-297.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Is <span class="process-math">\(\vec{b}=\colvec{-7\\ 9\\ 0}\)</span> in the span of the set of columns of <span class="process-math">\(A = \begin{bmatrix} 1\amp 5\amp -2\amp 0 \\ -3\amp 1\amp 9\amp -5 \\ 4\amp -8\amp -1\amp 7 \end{bmatrix}\text{?}\)</span> If so, what are the coefficients?</p>
+<p>If <span class="process-math">\(S=\left\{ \colvec{1\\ 1\\ 1},\colvec{1\\ -1\\ 1},\colvec{1\\ -1\\ -1} \right\}\text{,}\)</span> is <span class="process-math">\(\vec{b}=\colvec{1\\ 2\\ 3} \in span(S)\text{?}\)</span></p>
 <span class="incontext"><a href="section-12.html#p-297" class="internal">in-context</a></span>
 </body>
 </html>
