--- a/knowl/p-298.html
+++ b/knowl/p-298.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Let <span class="process-math">\(V\)</span> be a vector space. If <span class="process-math">\(S=\{\vec{v_1},\vec{v_2},\dots,\vec{v_k}\}\subseteq V\)</span> is a set of <span class="process-math">\(k\)</span> vectors from <span class="process-math">\(V\text{,}\)</span> then <span class="process-math">\(span(S)\)</span> is a subspace of <span class="process-math">\(V\text{.}\)</span></p>
+<p>Is <span class="process-math">\(1-t^2\)</span> in the span of <span class="process-math">\(\{ 3, 4+t+t^2,5-t\}\text{?}\)</span></p>
 <span class="incontext"><a href="section-12.html#p-298" class="internal">in-context</a></span>
 </body>
 </html>
