--- a/knowl/p-300.html
+++ b/knowl/p-300.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<p><span class="process-math">\(\mathbb{R}^3\)</span></p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>Is <span class="process-math">\(\vec{b}=\colvec{-7\\ 9\\ 0}\)</span> in the span of the set of columns of <span class="process-math">\(A = \begin{bmatrix} 1\amp 5\amp -2\amp 0 \\ -3\amp 1\amp 9\amp -5 \\ 4\amp -8\amp -1\amp 7 \end{bmatrix}\text{?}\)</span> If so, what are the coefficients?</p>
 <span class="incontext"><a href="section-12.html#p-300" class="internal">in-context</a></span>
 </body>
 </html>
