--- a/knowl/p-301.html
+++ b/knowl/p-301.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<p><span class="process-math">\(\mathbb{P}_2\)</span></p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>Let <span class="process-math">\(V\)</span> be a vector space. If <span class="process-math">\(S=\{\vec{v_1},\vec{v_2},\dots,\vec{v_k}\}\subseteq V\)</span> is a set of <span class="process-math">\(k\)</span> vectors from <span class="process-math">\(V\text{,}\)</span> then <span class="process-math">\(span(S)\)</span> is a subspace of <span class="process-math">\(V\text{.}\)</span></p>
 <span class="incontext"><a href="section-12.html#p-301" class="internal">in-context</a></span>
 </body>
 </html>
