--- a/knowl/p-303.html
+++ b/knowl/p-303.html
@@ -11,9 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Show that the set <span class="process-math">\(\{
-1+t,t+t^2,1+t^3,t+t^2+t^3 \}\)</span> spans all of <span class="process-math">\(\mathbb{P}_3\text{.}\)</span></p>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p><span class="process-math">\(\mathbb{R}^3\)</span></p>
 <span class="incontext"><a href="section-12.html#p-303" class="internal">in-context</a></span>
 </body>
 </html>
