--- a/knowl/p-304.html
+++ b/knowl/p-304.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Come up with a system of equations that you will need to solve and use your theorems from earlier chapters.</p>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p><span class="process-math">\(\mathbb{P}_2\)</span></p>
 <span class="incontext"><a href="section-12.html#p-304" class="internal">in-context</a></span>
 </body>
 </html>
