--- a/knowl/p-305.html
+++ b/knowl/p-305.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Geometrically describe the span of <span class="process-math">\(\left\{ \colvec{2\\ 1\\ 4} \right\} \text{.}\)</span></p>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p><span class="process-math">\(Sym_{n \times n}\)</span></p>
 <span class="incontext"><a href="section-12.html#p-305" class="internal">in-context</a></span>
 </body>
 </html>
