--- a/knowl/p-307.html
+++ b/knowl/p-307.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Does the span of <span class="process-math">\(\left\{ \colvec{2\\ 1\\ 4} , \colvec{3\\ -1\\ 1} \right\} \)</span> have to go through the origin?</p>
+<p>Come up with a system of equations that you will need to solve and use your theorems from earlier chapters.</p>
 <span class="incontext"><a href="section-12.html#p-307" class="internal">in-context</a></span>
 </body>
 </html>
