--- a/knowl/p-309.html
+++ b/knowl/p-309.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>A set of vectors <span class="process-math">\(S\)</span> is <dfn class="terminology">linearly independent</dfn> if the only linear combination of elements of <span class="process-math">\(S\)</span> that equals the zero vector is the trivial linear combination. In other words, <span class="process-math">\(S\)</span> being a linear independent set implies that if <span class="process-math">\(c_1\vec{v_1}+c_2\vec{v_2}+...+c_k \vec{v_k}=\vec{0}\)</span> where <span class="process-math">\(\vec{v_i} \in S\text{,}\)</span> then all <span class="process-math">\(c_i=0\text{.}\)</span></p>
-<span class="incontext"><a href="section-13.html#p-309" class="internal">in-context</a></span>
+<p>Geometrically describe the span of <span class="process-math">\(\left\{ \colvec{2\\ 1\\ 4} , \colvec{3\\ -1\\ 1} \right\} \text{.}\)</span></p>
+<span class="incontext"><a href="section-12.html#p-309" class="internal">in-context</a></span>
 </body>
 </html>
