--- a/knowl/p-311.html
+++ b/knowl/p-311.html
@@ -12,8 +12,9 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Is the set <span class="process-math">\(\left\{ \colvec{1\\ -3\\
-2} \right\}\)</span> linearly independent?</p>
-<span class="incontext"><a href="section-13.html#p-311" class="internal">in-context</a></span>
+<p>Does the span of <span class="process-math">\(\left\{
+\vec{v_1},...,\vec{v_k} \right\} \)</span> where <span class="process-math">\(\vec{v_i} \in
+\mathbb{R}^n\)</span> have to go through the origin?</p>
+<span class="incontext"><a href="section-12.html#p-311" class="internal">in-context</a></span>
 </body>
 </html>
