--- a/knowl/p-313.html
+++ b/knowl/p-313.html
@@ -11,9 +11,9 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>Choose a vector <span class="process-math">\(\vec{v}\)</span> so that the set <span class="process-math">\(\left\{ \colvec{2\\
-3\\ 0}, \colvec{-1\\ -1\\ 2} , \vec{v}  \right\} \)</span> is linearly independent, where <span class="process-math">\(\vec{v} \in \mathbb{R}^3\text{.}\)</span></p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>A set of vectors <span class="process-math">\(S\)</span> is <dfn class="terminology">linearly dependent</dfn> if the set is not linearly independent. More specifically, there exists a solution to <span class="process-math">\(c_1\vec{v_1}+c_2\vec{v_2}+...+c_k \vec{v_k}=\vec{0}\)</span> where <span class="process-math">\(\vec{v_i} \in S\)</span> and at least one of the <span class="process-math">\(c_j \neq
+0\text{.}\)</span></p>
 <span class="incontext"><a href="section-13.html#p-313" class="internal">in-context</a></span>
 </body>
 </html>
