--- a/knowl/p-314.html
+++ b/knowl/p-314.html
@@ -11,9 +11,9 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>Is your choice of <span class="process-math">\(\vec{v}\)</span> in <span class="process-math">\(Span \left( \left\{
-\colvec{2\\ 3\\ 0}, \colvec{-1\\ -1\\ 2} \right\} \right)\text{?}\)</span> Show why or why not.</p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>Is the set <span class="process-math">\(\left\{ \colvec{1\\ -3\\
+2} \right\}\)</span> linearly independent?</p>
 <span class="incontext"><a href="section-13.html#p-314" class="internal">in-context</a></span>
 </body>
 </html>
