--- a/knowl/p-317.html
+++ b/knowl/p-317.html
@@ -11,8 +11,9 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Prove that <span class="process-math">\(\{ 1+t,t+t^2,1+t^2 \}\)</span> is linearly independent.</p>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p>Is your choice of <span class="process-math">\(\vec{v}\)</span> in <span class="process-math">\(Span \left( \left\{
+\colvec{2\\ 3\\ 0}, \colvec{-1\\ -1\\ 2} \right\} \right)\text{?}\)</span> Show why or why not.</p>
 <span class="incontext"><a href="section-13.html#p-317" class="internal">in-context</a></span>
 </body>
 </html>
