--- a/knowl/p-318.html
+++ b/knowl/p-318.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>If a set <span class="process-math">\(S\)</span> of a vector space <span class="process-math">\(V\)</span> contains <span class="process-math">\(\vec{0}_V\text{,}\)</span> then <span class="process-math">\(S\)</span> is linearly dependent.</p>
+<p>Is <span class="process-math">\(\{ 2+t^2, 1+t^2 \}\)</span> a linearly dependent set in <span class="process-math">\(\mathbb{P}_2\text{?}\)</span></p>
 <span class="incontext"><a href="section-13.html#p-318" class="internal">in-context</a></span>
 </body>
 </html>
