--- a/knowl/p-319.html
+++ b/knowl/p-319.html
@@ -12,7 +12,11 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>If <span class="process-math">\(A\)</span> is a <span class="process-math">\(m\)</span> by <span class="process-math">\(n\)</span> matrix, then the columns of A form a linearly independent set if and only if <span class="process-math">\(A\)</span> has <span class="fillin underline" role="img" aria-label="5-character blank" style="width: 2.272727272727273em;"></span> pivot columns. Completely justify your response.</p>
+<p>Is <span class="process-math">\(\left\{ \begin{bmatrix} 1\amp 1\\0\amp
+0 \end{bmatrix},\begin{bmatrix}0\amp 0\\ 1\amp 1
+\end{bmatrix},\begin{bmatrix} 1\amp 0\\0\amp 1
+\end{bmatrix},\begin{bmatrix} 0\amp 1\\1\amp 0 \end{bmatrix}
+\right\}\)</span> a linearly independent set in <span class="process-math">\(M_{2 \times 2}\text{?}\)</span></p>
 <span class="incontext"><a href="section-13.html#p-319" class="internal">in-context</a></span>
 </body>
 </html>
