--- a/knowl/p-321.html
+++ b/knowl/p-321.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Prove or disprove: If <span class="process-math">\(M=\{ \vec{v_1},\vec{v_2},...,\vec{v_n}\}\)</span> is linearly dependent, then any subset of <span class="process-math">\(M\)</span> is linearly dependent.</p>
+<p>If a set <span class="process-math">\(S\)</span> of a vector space <span class="process-math">\(V\)</span> contains <span class="process-math">\(\vec{0}_V\text{,}\)</span> then <span class="process-math">\(S\)</span> is linearly dependent.</p>
 <span class="incontext"><a href="section-13.html#p-321" class="internal">in-context</a></span>
 </body>
 </html>
