--- a/knowl/p-322.html
+++ b/knowl/p-322.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>If <span class="process-math">\(\vec{u}\)</span> is in the span of <span class="process-math">\(S\text{,}\)</span> then <span class="process-math">\(S \cup \{\vec{u}\}\)</span> is linearly dependent.</p>
+<p>If <span class="process-math">\(A\)</span> is a <span class="process-math">\(m\)</span> by <span class="process-math">\(n\)</span> matrix, then the columns of A form a linearly independent set if and only if <span class="process-math">\(A\)</span> has <span class="fillin underline" role="img" aria-label="5-character blank" style="width: 2.272727272727273em;"></span> pivot columns. Completely justify your response.</p>
 <span class="incontext"><a href="section-13.html#p-322" class="internal">in-context</a></span>
 </body>
 </html>
