--- a/knowl/p-323.html
+++ b/knowl/p-323.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h3 class="heading"><span class="type">Paragraph</span></h3>
-<p>The following two theorems are a wonderful summary of the difference between and the importance of linear dependence and linear independence.</p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>If <span class="process-math">\(M=\{ \vec{v_1},\vec{v_2},...,\vec{v_n}\}\)</span> is linearly independent, then any subset of <span class="process-math">\(M\)</span> is linearly independent.</p>
 <span class="incontext"><a href="section-13.html#p-323" class="internal">in-context</a></span>
 </body>
 </html>
