--- a/knowl/p-324.html
+++ b/knowl/p-324.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>If <span class="process-math">\(S\)</span> is a linearly dependent set, then any <span class="process-math">\(\vec{w} \in span(S)\)</span> can be written as a linear combination from <span class="process-math">\(S\)</span> in more than one way.</p>
+<p>Prove or disprove: If <span class="process-math">\(M=\{ \vec{v_1},\vec{v_2},...,\vec{v_n}\}\)</span> is linearly dependent, then any subset of <span class="process-math">\(M\)</span> is linearly dependent.</p>
 <span class="incontext"><a href="section-13.html#p-324" class="internal">in-context</a></span>
 </body>
 </html>
