--- a/knowl/p-325.html
+++ b/knowl/p-325.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>If <span class="process-math">\(S\)</span> is a linearly independent set, then any <span class="process-math">\(\vec{w} \in span(S)\)</span> can be written as a linear combination from <span class="process-math">\(S\)</span> in only one way.</p>
+<p>If <span class="process-math">\(\vec{u}\)</span> is in the span of <span class="process-math">\(S\text{,}\)</span> then <span class="process-math">\(S \cup \{\vec{u}\}\)</span> is linearly dependent.</p>
 <span class="incontext"><a href="section-13.html#p-325" class="internal">in-context</a></span>
 </body>
 </html>
