--- a/knowl/p-326.html
+++ b/knowl/p-326.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Is <span class="process-math">\(\mathbb{R}\)</span> a subspace of <span class="process-math">\(\mathbb{C}\text{?}\)</span> Why or why not?</p>
-<span class="incontext"><a href="section-11.html#p-275" class="internal">in-context</a></span>
+<h3 class="heading"><span class="type">Paragraph</span></h3>
+<p>The following two theorems are a wonderful summary of the difference between and the importance of linear dependence and linear independence.</p>
+<span class="incontext"><a href="section-13.html#p-326" class="internal">in-context</a></span>
 </body>
 </html>
