--- a/knowl/proof-2.html
+++ b/knowl/proof-2.html
@@ -11,15 +11,7 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<article class="theorem theorem-like"><h3 class="heading">
-<span class="type">Theorem</span><span class="space"> </span><span class="codenumber">3.6</span><span class="period">.</span>
-</h3>
-<p>A subset <span class="process-math">\(H\)</span> of a vector space <span class="process-math">\(V\)</span> is a subspace if and only if the following are true:</p>
-<ol class="lower-alpha">
-<li><p>The zero vector of <span class="process-math">\(V\)</span> is in <span class="process-math">\(H\text{;}\)</span> <span class="process-math">\(\vec{0}_V \in H\text{.}\)</span></p></li>
-<li><p>H is closed under vector addition; if <span class="process-math">\(\vec{u}, \vec{v} \in H\text{,}\)</span> then <span class="process-math">\(\vec{u}+\vec{v}\in H\text{.}\)</span></p></li>
-<li><p>H is closed under scalar multiplication; if <span class="process-math">\(\vec{u} \in H\)</span> and <span class="process-math">\(c \in \mathbb{R}\text{,}\)</span> then <span class="process-math">\(c\vec{u} \in H\text{.}\)</span></p></li>
-</ol></article><article class="proof"><h3 class="heading"><span class="type">Proof<span class="period">.</span></span></h3>
+<article class="proof"><h3 class="heading"><span class="type">Proof</span></h3>
 <p>We first assume that <span class="process-math">\(H\)</span> is a subspace of <span class="process-math">\(V\text{.}\)</span> Item (a) of the theorem follows from axiom 4 of being a vector space. Item (b) of the theorem follows from axiom 1 of being a vector space. Item (c) of the theorem follows from axiom 6 of being a vector space.</p>
 <p>For the converse, we assume that <span class="process-math">\(H\subseteq V\)</span> and the three items of the theorem satement are satisfied. We must verify the 10 vector space axioms:</p>
 <ol class="decimal">
@@ -33,6 +25,6 @@
 <li><p>Since <span class="process-math">\(H\subseteq V\)</span> and this axiom holds for all elements of <span class="process-math">\(V\text{,}\)</span> the axiom holds when restricted to elements of <span class="process-math">\(H\text{.}\)</span></p></li>
 <li><p>Since <span class="process-math">\(H\subseteq V\)</span> and this axiom holds for all elements of <span class="process-math">\(V\text{,}\)</span> the axiom holds when restricted to elements of <span class="process-math">\(H\text{.}\)</span></p></li>
 <li><p>Since <span class="process-math">\(H\subseteq V\)</span> and this axiom holds for all elements of <span class="process-math">\(V\text{,}\)</span> the axiom holds when restricted to elements of <span class="process-math">\(H\text{.}\)</span></p></li>
-</ol></article><span class="incontext"><a href="section-11.html#theorem-13" class="internal">in-context</a></span>
+</ol></article><span class="incontext"><a href="section-11.html#proof-2" class="internal">in-context</a></span>
 </body>
 </html>
