--- a/knowl/solution-6.html
+++ b/knowl/solution-6.html
@@ -11,7 +11,10 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
+<div class="solution solution-like">
+<h3 class="heading">
+<span class="type">Solution</span><span class="space"> </span><span class="codenumber">3.15.1</span><span class="period">.</span>
+</h3>
 <p>The statement is true. We use Theorem 3.6 to prove this. First note that the function <span class="process-math">\(Z(t)=0\)</span> is the zero vector for this vector space, as for any function <span class="process-math">\(f\colon \mathbb{R}\to\mathbb{R}\text{,}\)</span> <span class="process-math">\((f+Z)(t) = f(t)+Z(t) =
 f(t)+0 = f(t)\text{.}\)</span> To see that <span class="process-math">\(Z\)</span> is odd, we have <span class="process-math">\(Z(-t)
 = 0=-0=-Z(t)\text{.}\)</span> Now suppose that <span class="process-math">\(f,g\)</span> are odd functions. We have</p>
@@ -22,6 +25,7 @@ f(t)+0 = f(t)\text{.}\)</span> To see that <span class="process-math">\(Z\)</spa
 </div>
 <p class="continuation">verifying the second part of the theorem is satisfied. Finally, let <span class="process-math">\(c\in\mathbb{R}\text{.}\)</span> Now <span class="process-math">\((cf)(-t) =
 c(f(-t))=c(-f(t))=-cf(t)=-(cf)(t)\text{.}\)</span> Thus, the set of odd functions are a subspace of the vector space of functions from <span class="process-math">\(\mathbb{R}\)</span> to <span class="process-math">\(\mathbb{R}\text{.}\)</span></p>
-<span class="incontext"><a href="section-11.html#p-282" class="internal">in-context</a></span>
+</div>
+<span class="incontext"><a href="section-11.html#solution-6" class="internal">in-context</a></span>
 </body>
 </html>
