--- a/section-11.html
+++ b/section-11.html
@@ -151,49 +151,77 @@ window.MathJax = {
 <li id="li-62"><p id="p-derived-li-62">The zero vector of <span class="process-math">\(V\)</span> is in <span class="process-math">\(H\text{;}\)</span> <span class="process-math">\(\vec{0}_V \in H\text{.}\)</span></p></li>
 <li id="li-63"><p id="p-derived-li-63">H is closed under vector addition; if <span class="process-math">\(\vec{u}, \vec{v} \in H\text{,}\)</span> then <span class="process-math">\(\vec{u}+\vec{v}\in H\text{.}\)</span></p></li>
 <li id="li-64"><p id="p-derived-li-64">H is closed under scalar multiplication; if <span class="process-math">\(\vec{u} \in H\)</span> and <span class="process-math">\(c \in \mathbb{R}\text{,}\)</span> then <span class="process-math">\(c\vec{u} \in H\text{.}\)</span></p></li>
-</ol></article><p id="p-271">This theorem is so useful because we can prove a set is a vector space by checking only <em class="emphasis">three</em> properties instead of the <em class="emphasis">ten</em> that are involved in the definition. The reason that we do not need to check these other properties is that by using this subspace, we already have proven the proper rules of arithmetic from the parent space. Additionally, since we are using the same rules for scalar multiplication and vector addition as the parent space, we <em class="emphasis">must</em> also have the same scalars as the parent space.</p>
+</ol></article><article class="proof" id="proof-2"><h3 class="heading"><span class="type">Proof<span class="period">.</span></span></h3>
+<p id="p-271">We first assume that <span class="process-math">\(H\)</span> is a subspace of <span class="process-math">\(V\text{.}\)</span> Item (a) of the theorem follows from axiom 4 of being a vector space. Item (b) of the theorem follows from axiom 1 of being a vector space. Item (c) of the theorem follows from axiom 6 of being a vector space.</p>
+<p id="p-272">For the converse, we assume that <span class="process-math">\(H\subseteq V\)</span> and the three items of the theorem satement are satisfied. We must verify the 10 vector space axioms:</p>
+<ol class="decimal">
+<li id="li-65"><p id="p-derived-li-65">This follows from item (b) of the theorem statement.</p></li>
+<li id="li-66"><p id="p-derived-li-66">Since <span class="process-math">\(H\subseteq V\)</span> and this axiom holds for all elements of <span class="process-math">\(V\text{,}\)</span> the axiom holds when restricted to elements of <span class="process-math">\(H\text{.}\)</span></p></li>
+<li id="li-67"><p id="p-derived-li-67">Since <span class="process-math">\(H\subseteq V\)</span> and this axiom holds for all elements of <span class="process-math">\(V\text{,}\)</span> the axiom holds when restricted to elements of <span class="process-math">\(H\text{.}\)</span></p></li>
+<li id="li-68"><p id="p-derived-li-68">This follows from item (a) of the theorem statement.</p></li>
+<li id="li-69"><p id="p-derived-li-69">This requires proof. Since <span class="process-math">\(-1\in\mathbb{R}\text{,}\)</span> item (c) of the theorem statement tells us that for all <span class="process-math">\(\vec{u}\in H\text{,}\)</span> <span class="process-math">\((-1)\vec{u}=-\vec{u}\in H\text{.}\)</span> Thus, this axiom is verified.</p></li>
+<li id="li-70"><p id="p-derived-li-70">This follows from item (c) of the theorem statement.</p></li>
+<li id="li-71"><p id="p-derived-li-71">Since <span class="process-math">\(H\subseteq V\)</span> and this axiom holds for all elements of <span class="process-math">\(V\text{,}\)</span> the axiom holds when restricted to elements of <span class="process-math">\(H\text{.}\)</span></p></li>
+<li id="li-72"><p id="p-derived-li-72">Since <span class="process-math">\(H\subseteq V\)</span> and this axiom holds for all elements of <span class="process-math">\(V\text{,}\)</span> the axiom holds when restricted to elements of <span class="process-math">\(H\text{.}\)</span></p></li>
+<li id="li-73"><p id="p-derived-li-73">Since <span class="process-math">\(H\subseteq V\)</span> and this axiom holds for all elements of <span class="process-math">\(V\text{,}\)</span> the axiom holds when restricted to elements of <span class="process-math">\(H\text{.}\)</span></p></li>
+<li id="li-74"><p id="p-derived-li-74">Since <span class="process-math">\(H\subseteq V\)</span> and this axiom holds for all elements of <span class="process-math">\(V\text{,}\)</span> the axiom holds when restricted to elements of <span class="process-math">\(H\text{.}\)</span></p></li>
+</ol></article><p id="p-273">This theorem is so useful because we can prove a set is a vector space by checking only <em class="emphasis">three</em> properties instead of the <em class="emphasis">ten</em> that are involved in the definition. The reason that we do not need to check these other properties is that by using this subspace, we already have proven the proper rules of arithmetic from the parent space. Additionally, since we are using the same rules for scalar multiplication and vector addition as the parent space, we <em class="emphasis">must</em> also have the same scalars as the parent space.</p>
 <article class="investigation project-like" id="investigation-61"><h3 class="heading">
 <span class="type">Question</span><span class="space"> </span><span class="codenumber">3.8</span><span class="period">.</span>
 </h3>
-<p id="p-272">Use the preceding theorem to prove that <span class="process-math">\(\mathbb{P}_n\)</span> is a subspace of <span class="process-math">\(\mathbb{P}\text{.}\)</span></p></article><article class="investigation project-like" id="investigation-62"><h3 class="heading">
+<p id="p-274">Use the preceding theorem to prove that <span class="process-math">\(\mathbb{P}_n\)</span> is a subspace of <span class="process-math">\(\mathbb{P}\text{.}\)</span></p></article><article class="investigation project-like" id="investigation-62"><h3 class="heading">
 <span class="type">Question</span><span class="space"> </span><span class="codenumber">3.9</span><span class="period">.</span>
 </h3>
-<p id="p-273">Is <span class="process-math">\(\mathbb{R}\)</span> a subspace of <span class="process-math">\(\mathbb{C}\text{?}\)</span> Why or why not?</p></article><article class="investigation project-like" id="investigation-63"><h3 class="heading">
+<p id="p-275">Is <span class="process-math">\(\mathbb{R}\)</span> a subspace of <span class="process-math">\(\mathbb{C}\text{?}\)</span> Why or why not?</p></article><article class="investigation project-like" id="investigation-63"><h3 class="heading">
 <span class="type">Question</span><span class="space"> </span><span class="codenumber">3.10</span><span class="period">.</span>
 </h3>
-<p id="p-274">Is <span class="process-math">\(\mathbb{R}^2\)</span> a subspace of <span class="process-math">\(\mathbb{R}^3\text{?}\)</span> Why or why not?</p></article><article class="investigation project-like" id="investigation-64"><h3 class="heading">
+<p id="p-276">Is <span class="process-math">\(\mathbb{R}^2\)</span> a subspace of <span class="process-math">\(\mathbb{R}^3\text{?}\)</span> Why or why not?</p></article><article class="investigation project-like" id="investigation-64"><h3 class="heading">
 <span class="type">Question</span><span class="space"> </span><span class="codenumber">3.11</span><span class="period">.</span>
 </h3>
-<p id="p-275">Is the set of points on the plane given by <span class="process-math">\(z=0\)</span> a subspace of <span class="process-math">\(\mathbb{R}^3\text{?}\)</span> Why or why not?</p></article><article class="investigation project-like" id="investigation-65"><h3 class="heading">
+<p id="p-277">Is the set of points on the plane given by <span class="process-math">\(z=0\)</span> a subspace of <span class="process-math">\(\mathbb{R}^3\text{?}\)</span> Why or why not?</p></article><article class="investigation project-like" id="investigation-65"><h3 class="heading">
 <span class="type">Question</span><span class="space"> </span><span class="codenumber">3.12</span><span class="period">.</span>
 </h3>
-<p id="p-276">Is the set of points on the plane given by <span class="process-math">\(z=1\)</span> a subspace of <span class="process-math">\(\mathbb{R}^3\text{?}\)</span> Why or why not?</p></article><article class="investigation project-like" id="investigation-66"><h3 class="heading">
+<p id="p-278">Is the set of points on the plane given by <span class="process-math">\(z=1\)</span> a subspace of <span class="process-math">\(\mathbb{R}^3\text{?}\)</span> Why or why not?</p></article><article class="investigation project-like" id="investigation-66"><h3 class="heading">
 <span class="type">Question</span><span class="space"> </span><span class="codenumber">3.13</span><span class="period">.</span>
 </h3>
-<p id="p-277">Draw a plot of the points in <span class="process-math">\(\mathbb{R}^2\)</span> given by <span class="process-math">\(\{ \vec{x}=\colvec{x_1\\ x_2} \in
+<p id="p-279">Draw a plot of the points in <span class="process-math">\(\mathbb{R}^2\)</span> given by <span class="process-math">\(\{ \vec{x}=\colvec{x_1\\ x_2} \in
 \mathbb{R}^2 \mid x_1 x_2 \geq 0\}\text{.}\)</span> Is <span class="process-math">\(\{ \vec{x}=\colvec{x_1\\
 x_2} \in \mathbb{R}^2 \mid x_1 x_2 \geq 0\}\)</span> a subspace of <span class="process-math">\(\mathbb{R}^2\text{?}\)</span> Why or why not?</p></article><article class="investigation project-like" id="investigation-67"><h3 class="heading">
 <span class="type">Question</span><span class="space"> </span><span class="codenumber">3.14</span><span class="period">.</span>
 </h3>
-<p id="p-278">Is <span class="process-math">\(Sym_{n \times n}\text{,}\)</span> the set of symmetric <span class="process-math">\(n\)</span> by <span class="process-math">\(n\)</span> matrices a subspace of <span class="process-math">\(M_{n \times n}\text{?}\)</span> Why or why not?</p></article><article class="investigation project-like" id="investigation-68"><h3 class="heading">
+<p id="p-280">Is <span class="process-math">\(Sym_{n \times n}\text{,}\)</span> the set of symmetric <span class="process-math">\(n\)</span> by <span class="process-math">\(n\)</span> matrices a subspace of <span class="process-math">\(M_{n \times n}\text{?}\)</span> Why or why not?</p></article><article class="investigation project-like" id="investigation-68"><h3 class="heading">
 <span class="type">Question</span><span class="space"> </span><span class="codenumber">3.15</span><span class="period">.</span>
 </h3>
-<p id="p-279">Prove or disprove: The set of odd functions on <span class="process-math">\(\mathbb{R}\)</span> (i.e., those for which <span class="process-math">\(f(-t)=-f(t)\)</span> for every <span class="process-math">\(t \in \mathbb{R}\)</span>) a subspace of <span class="process-math">\(F(\mathbb{R},\mathbb{R})\text{.}\)</span></p></article><article class="theorem theorem-like" id="theorem-14"><h3 class="heading">
+<p id="p-281">Prove or disprove: The set of odd functions on <span class="process-math">\(\mathbb{R}\)</span> (i.e., those for which <span class="process-math">\(f(-t)=-f(t)\)</span> for every <span class="process-math">\(t \in \mathbb{R}\)</span>) a subspace of <span class="process-math">\(F(\mathbb{R},\mathbb{R})\text{.}\)</span></p>
+<div class="solutions">
+<a href="" data-knowl="" class="id-ref solution-knowl original" data-refid="hk-solution-6" id="solution-6"><span class="type">Solution</span><span class="period">.</span></a><div class="hidden-content tex2jax_ignore" id="hk-solution-6"><div class="solution solution-like">
+<p id="p-282">The statement is true. We use Theorem 3.6 to prove this. First note that the function <span class="process-math">\(Z(t)=0\)</span> is the zero vector for this vector space, as for any function <span class="process-math">\(f\colon \mathbb{R}\to\mathbb{R}\text{,}\)</span> <span class="process-math">\((f+Z)(t) = f(t)+Z(t) =
+f(t)+0 = f(t)\text{.}\)</span> To see that <span class="process-math">\(Z\)</span> is odd, we have <span class="process-math">\(Z(-t)
+= 0=-0=-Z(t)\text{.}\)</span> Now suppose that <span class="process-math">\(f,g\)</span> are odd functions. We have</p>
+<div class="displaymath process-math" data-contains-math-knowls="">
+\begin{equation*}
+(f+g)(-t) = f(-t)+g(-t)=-f(t)+(-g(t))=-(f(t)+g(t))=-(f+g)(t)\text{,}
+\end{equation*}
+</div>
+<p class="continuation">verifying the second part of the theorem is satisfied. Finally, let <span class="process-math">\(c\in\mathbb{R}\text{.}\)</span> Now <span class="process-math">\((cf)(-t) =
+c(f(-t))=c(-f(t))=-cf(t)=-(cf)(t)\text{.}\)</span> Thus, the set of odd functions are a subspace of the vector space of functions from <span class="process-math">\(\mathbb{R}\)</span> to <span class="process-math">\(\mathbb{R}\text{.}\)</span></p>
+</div></div>
+</div></article><article class="theorem theorem-like" id="theorem-14"><h3 class="heading">
 <span class="type">Theorem</span><span class="space"> </span><span class="codenumber">3.7</span><span class="period">.</span>
 </h3>
-<p id="p-280">If <span class="process-math">\(A\)</span> is a <span class="process-math">\(m\)</span> by <span class="process-math">\(n\)</span> matrix, the solution set to the homogeneous equation <span class="process-math">\(A\vec{x}=\vec{0}\)</span> is a subspace of <span class="process-math">\(\mathbb{R}^n\text{.}\)</span></p></article><article class="theorem theorem-like" id="theorem-15"><h3 class="heading">
+<p id="p-283">If <span class="process-math">\(A\)</span> is a <span class="process-math">\(m\)</span> by <span class="process-math">\(n\)</span> matrix, the solution set to the homogeneous equation <span class="process-math">\(A\vec{x}=\vec{0}\)</span> is a subspace of <span class="process-math">\(\mathbb{R}^n\text{.}\)</span></p></article><article class="theorem theorem-like" id="theorem-15"><h3 class="heading">
 <span class="type">Theorem</span><span class="space"> </span><span class="codenumber">3.8</span><span class="period">.</span>
 </h3>
-<p id="p-281">If <span class="process-math">\(H\)</span> and <span class="process-math">\(K\)</span> are subspaces of some vector space <span class="process-math">\(V\text{,}\)</span> then the set <span class="process-math">\(H \cap K\)</span> is a subspace of <span class="process-math">\(V\)</span> as well.</p></article><article class="investigation project-like" id="investigation-69"><h3 class="heading">
+<p id="p-284">If <span class="process-math">\(H\)</span> and <span class="process-math">\(K\)</span> are subspaces of some vector space <span class="process-math">\(V\text{,}\)</span> then the set <span class="process-math">\(H \cap K\)</span> is a subspace of <span class="process-math">\(V\)</span> as well.</p></article><article class="investigation project-like" id="investigation-69"><h3 class="heading">
 <span class="type">Question</span><span class="space"> </span><span class="codenumber">3.16</span><span class="period">.</span>
 </h3>
-<p id="p-282">Prove or Disprove: the set of <span class="process-math">\(2\)</span> by <span class="process-math">\(2\)</span> matrices with at least one zero entry is a subspace of <span class="process-math">\(M_{2 \times 2}\text{.}\)</span></p></article><article class="investigation project-like" id="investigation-70"><h3 class="heading">
+<p id="p-285">Prove or Disprove: the set of <span class="process-math">\(2\)</span> by <span class="process-math">\(2\)</span> matrices with at least one zero entry is a subspace of <span class="process-math">\(M_{2 \times 2}\text{.}\)</span></p></article><article class="investigation project-like" id="investigation-70"><h3 class="heading">
 <span class="type">Question</span><span class="space"> </span><span class="codenumber">3.17</span><span class="period">.</span>
 </h3>
-<p id="p-283">Prove or Disprove: the set of matrices of the form <span class="process-math">\(\begin{bmatrix} a \amp b \\0 \amp -a \end{bmatrix}\)</span> is a subspace of <span class="process-math">\(M_{2 \times 2}\text{.}\)</span></p></article><article class="investigation project-like" id="investigation-71"><h3 class="heading">
+<p id="p-286">Prove or Disprove: the set of matrices of the form <span class="process-math">\(\begin{bmatrix} a \amp b \\0 \amp -a \end{bmatrix}\)</span> is a subspace of <span class="process-math">\(M_{2 \times 2}\text{.}\)</span></p></article><article class="investigation project-like" id="investigation-71"><h3 class="heading">
 <span class="type">Question</span><span class="space"> </span><span class="codenumber">3.18</span><span class="period">.</span>
 </h3>
-<p id="p-284">Prove or disprove: The set of quadratic polynomials of the form <span class="process-math">\(at^2+b\)</span> is a subspace of the vector space of polynomials.</p></article></section></div></main>
+<p id="p-287">Prove or disprove: The set of quadratic polynomials of the form <span class="process-math">\(at^2+b\)</span> is a subspace of the vector space of polynomials.</p></article></section></div></main>
 </div>
 </body>
 </html>
