Latest build of target web.

--- a/knowl/investigation-146.html
+++ b/knowl/investigation-146.html
@@ -21,7 +21,7 @@ sagecell.makeSagecell({inputLocation: 'pre.sagecell-sage',
 <article class="investigation project-like"><h3 class="heading">
 <span class="type">Question</span><span class="space"> </span><span class="codenumber">4.38</span><span class="period">.</span>
 </h3>
-<div class="introduction"><p>Find each of the following matrices: write out the characteristic polynomial, give all eigenvalues, and for each eigenvalue, find an eigenvector. You should do the first two by hand to get a feel for finding the characteristic polynomial. After that, I have provided a SageMath cell you can modify to get the characteristic polynomial quickly, but you will need to work from there to find eigenvalues and eigenvectors.</p></div>
+<div class="introduction"><p>For each of the following matrices: write out the characteristic polynomial, give all eigenvalues, and for each eigenvalue, find an eigenvector. You should do the first two by hand to get a feel for finding the characteristic polynomial. After that, I have provided a SageMath cell you can modify to get the characteristic polynomial quickly, but you will need to work from there to find eigenvalues and eigenvectors.</p></div>
 <article class="task exercise-like"><h4 class="heading"><span class="codenumber">(a)</span></h4>
 <p><span class="process-math">\(\begin{bmatrix} 1\amp 1 \\1\amp 1 \end{bmatrix}\)</span></p></article><article class="task exercise-like"><h4 class="heading"><span class="codenumber">(b)</span></h4>
 <p><span class="process-math">\(\begin{bmatrix} 1\amp -3 \\-3\amp 1 \end{bmatrix}\)</span></p></article><article class="task exercise-like"><h4 class="heading"><span class="codenumber">(c)</span></h4>
@@ -31,7 +31,7 @@ sagecell.makeSagecell({inputLocation: 'pre.sagecell-sage',
 # Getting the characteristic polynomial in factored
 # form is helpful. For that, change charpoly to
 # fcp below
-A.charpoly(t')
+A.charpoly('t')
 </script></pre></article><article class="task exercise-like"><h4 class="heading"><span class="codenumber">(d)</span></h4>
 <p><span class="process-math">\(\begin{bmatrix} 1\amp 2\amp 3 \\4\amp 5\amp 6\\7\amp 8\amp 9 \end{bmatrix}\)</span></p></article><article class="task exercise-like"><h4 class="heading"><span class="codenumber">(e)</span></h4>
 <p><span class="process-math">\(\begin{bmatrix} 4\amp -1\amp 6\\2\amp 1\amp 6\\2\amp -1\amp 8 \end{bmatrix}\)</span></p></article><article class="task exercise-like"><h4 class="heading"><span class="codenumber">(f)</span></h4>
