--- a/knowl/investigation-147.html
+++ b/knowl/investigation-147.html
@@ -14,6 +14,7 @@
 <article class="investigation project-like"><h3 class="heading">
 <span class="type">Question</span><span class="space"> </span><span class="codenumber">4.39</span><span class="period">.</span>
 </h3>
-<p>Prove that a nonzero vector, <span class="process-math">\(\vec{v}\text{,}\)</span> is an eigenvector of <span class="process-math">\(A\)</span> with eigenvalue <span class="process-math">\(\lambda\)</span> if and only if <span class="process-math">\(\vec{v}\)</span> is in the null space of <span class="process-math">\(A-\lambda Id\text{.}\)</span></p></article><span class="incontext"><a href="section-18.html#investigation-147" class="internal">in-context</a></span>
+<p>Prove that a nonzero vector, <span class="process-math">\(\vec{v}\text{,}\)</span> is an eigenvector of <span class="process-math">\(A\)</span> with eigenvalue <span class="process-math">\(\lambda\)</span> if and only if <span class="process-math">\(\vec{v}\)</span> is in the null space of <span class="process-math">\(A-\lambda Id\text{.}\)</span></p>
+<div class="solutions"><a href="" class="solution-knowl original" data-knowl="./knowl/solution-17-hidden.html" title="Solution 4.39.1"><span class="type">Solution</span><span class="period">.</span></a></div></article><span class="incontext"><a href="section-18.html#investigation-147" class="internal">in-context</a></span>
 </body>
 </html>
