--- a/knowl/investigation-157.html
+++ b/knowl/investigation-157.html
@@ -12,8 +12,9 @@
 </head>
 <body class="ignore-math">
 <article class="investigation project-like"><h4 class="heading">
-<span class="type">Question</span><span class="space"> </span><span class="codenumber">4.47</span><span class="period">.</span>
+<span class="type">Question</span><span class="space"> </span><span class="codenumber">4.49</span><span class="period">.</span>
 </h4>
-<p>Give an example of a matrix (with real eigenvalues) that is not diagonalizable. Justify your claim.</p></article><span class="incontext"><a href="section-18.html#investigation-155" class="internal">in-context</a></span>
+<p>Let <span class="process-math">\(A=\begin{bmatrix} 7 \amp -5 \amp 25\\ 10 \amp -8 \amp
+35\\ 0 \amp 0 \amp -1\end{bmatrix}\text{.}\)</span> Diagonalize <span class="process-math">\(A\)</span> and use your diagonalization to compute <span class="process-math">\(A^{10}\text{.}\)</span></p></article><span class="incontext"><a href="section-18.html#investigation-157" class="internal">in-context</a></span>
 </body>
 </html>
