--- a/knowl/p-513.html
+++ b/knowl/p-513.html
@@ -23,7 +23,7 @@ E'_kA = Id_n\text{.}
 <div class="displaymath process-math" data-contains-math-knowls="">
 \begin{equation*}
 A =
-(E'_k)^{-1}\cdots (E'_2)^{-1}\cdots(E'_1)^{-1}\text{.}
+(E'_k)^{-1}\cdots (E'_2)^{-1}(E'_1)^{-1}\text{.}
 \end{equation*}
 </div>
 <p class="continuation">As the inverse of an elementary matrix is an elementary matrix, the right-hand side is a product of elementary matrices as desired.</p>
