--- a/knowl/p-573.html
+++ b/knowl/p-573.html
@@ -11,9 +11,9 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>Let <span class="process-math">\(A =\begin{bmatrix} 2 \amp a\amp
-b\\0\amp 2\amp c\\0\amp 0\amp 2 \end{bmatrix}\text{.}\)</span> Show that <span class="process-math">\(A\)</span> only has an eigenvalue of 2. What is the algebraic multiplicity of the eigenvalue 2?</p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>If <span class="process-math">\(\lambda\)</span> is an eigenvalue of <span class="process-math">\(A\text{,}\)</span> then the <dfn class="terminology">eigenspace of <span class="process-math">\(\lambda\)</span></dfn>, <span class="process-math">\(E_\lambda\text{,}\)</span> is the set of vectors <span class="process-math">\(\vec{x}\)</span> such that <span class="process-math">\((A-\lambda
+Id_n)\vec{x}=\vec{0}\text{.}\)</span></p>
 <span class="incontext"><a href="section-18.html#p-573" class="internal">in-context</a></span>
 </body>
 </html>
