--- a/knowl/p-582.html
+++ b/knowl/p-582.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>If <span class="process-math">\(\vec{v_1}\)</span> is an eigenvector with eigenvalue <span class="process-math">\(\lambda_1\)</span> and <span class="process-math">\(\vec{v_2}\)</span> is an eigenvector with eigenvalue <span class="process-math">\(\lambda_2 \neq \lambda_1\text{,}\)</span> then <span class="process-math">\(\{ \vec{v_1},\vec{v_2} \}\)</span> is linearly independent.</p>
+<p>A matrix <span class="process-math">\(A\)</span> is <dfn class="terminology">diagonalizable</dfn> if there exists an invertible matrix <span class="process-math">\(Q\)</span> such that <span class="process-math">\(A=QDQ^{-1}\)</span> where <span class="process-math">\(D\)</span> is a diagonal matrix.</p>
 <span class="incontext"><a href="section-18.html#p-582" class="internal">in-context</a></span>
 </body>
 </html>
