--- a/knowl/solution-19-hidden.html
+++ b/knowl/solution-19-hidden.html
@@ -10,8 +10,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="robots" content="noindex, nofollow">
 </head>
-<body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
+<body class="ignore-math"><div class="solution solution-like">
 <p>Let <span class="process-math">\(\lambda\)</span> be the associated eigenvalue. We have that <span class="process-math">\(A\vec{v}_1 = \lambda\vec{v}_1\)</span> and <span class="process-math">\(A\vec{v}_2 =
 \lambda\vec{v}_2\text{.}\)</span> Thus, we have</p>
 <div class="displaymath process-math" data-contains-math-knowls="">
@@ -23,6 +22,5 @@ A\vec{v}_1 + A\vec{v}_2 = \lambda\vec{v}_1 + \lambda\vec{v}_2 =
 </div>
 <p class="continuation">Therefore, <span class="process-math">\(\vec{v}_1 +
 \vec{v}_2\)</span> is an eigenvector with the same eigenvalue.</p>
-<span class="incontext"><a href="section-18.html#p-572" class="internal">in-context</a></span>
-</body>
+</div></body>
 </html>
