--- a/knowl/task-183.html
+++ b/knowl/task-183.html
@@ -27,7 +27,7 @@ sagecell.makeSagecell({inputLocation: 'pre.sagecell-sage',
 # Getting the characteristic polynomial in factored
 # form is helpful. For that, change charpoly to
 # fcp below
-A.charpoly(t')
+A.charpoly('t')
 </script></pre></article><span class="incontext"><a href="section-18.html#task-183" class="internal">in-context</a></span>
 </body>
 </html>
