--- a/knowl/investigation-148.html
+++ b/knowl/investigation-148.html
@@ -14,6 +14,7 @@
 <article class="investigation project-like"><h3 class="heading">
 <span class="type">Question</span><span class="space"> </span><span class="codenumber">4.40</span><span class="period">.</span>
 </h3>
-<p>Prove that if <span class="process-math">\(\vec{v}\)</span> is an eigenvector of <span class="process-math">\(A\text{,}\)</span> then <span class="process-math">\(\alpha \vec{v}\)</span> is also an eigenvector of <span class="process-math">\(A\)</span> (when <span class="process-math">\(\alpha \neq 0\)</span>).</p></article><span class="incontext"><a href="section-18.html#investigation-148" class="internal">in-context</a></span>
+<p>Prove that if <span class="process-math">\(\vec{v}\)</span> is an eigenvector of <span class="process-math">\(A\text{,}\)</span> then <span class="process-math">\(\alpha \vec{v}\)</span> is also an eigenvector of <span class="process-math">\(A\)</span> (when <span class="process-math">\(\alpha \neq 0\)</span>).</p>
+<div class="solutions"><a href="" class="solution-knowl original" data-knowl="./knowl/solution-18-hidden.html" title="Solution 4.40.1"><span class="type">Solution</span><span class="period">.</span></a></div></article><span class="incontext"><a href="section-18.html#investigation-148" class="internal">in-context</a></span>
 </body>
 </html>
