--- a/knowl/investigation-149.html
+++ b/knowl/investigation-149.html
@@ -14,6 +14,7 @@
 <article class="investigation project-like"><h3 class="heading">
 <span class="type">Question</span><span class="space"> </span><span class="codenumber">4.41</span><span class="period">.</span>
 </h3>
-<p>Prove that if <span class="process-math">\(\vec{v_1}\)</span> and <span class="process-math">\(\vec{v_2}\)</span> are eigenvectors of <span class="process-math">\(A\)</span> with the same eigenvalue, then <span class="process-math">\(\vec{v_1}+\vec{v_2}\)</span> is also an eigenvector of <span class="process-math">\(A\text{.}\)</span> What is the eigenvalue of <span class="process-math">\(\vec{v_1}+\vec{v_2}\text{?}\)</span></p></article><span class="incontext"><a href="section-18.html#investigation-149" class="internal">in-context</a></span>
+<p>Prove that if <span class="process-math">\(\vec{v_1}\)</span> and <span class="process-math">\(\vec{v_2}\)</span> are eigenvectors of <span class="process-math">\(A\)</span> with the same eigenvalue, then <span class="process-math">\(\vec{v_1}+\vec{v_2}\)</span> is also an eigenvector of <span class="process-math">\(A\text{.}\)</span> What is the eigenvalue of <span class="process-math">\(\vec{v_1}+\vec{v_2}\text{?}\)</span></p>
+<div class="solutions"><a href="" class="solution-knowl original" data-knowl="./knowl/solution-19-hidden.html" title="Solution 4.41.1"><span class="type">Solution</span><span class="period">.</span></a></div></article><span class="incontext"><a href="section-18.html#investigation-149" class="internal">in-context</a></span>
 </body>
 </html>
