--- a/knowl/investigation-150.html
+++ b/knowl/investigation-150.html
@@ -14,6 +14,7 @@
 <article class="investigation project-like"><h3 class="heading">
 <span class="type">Question</span><span class="space"> </span><span class="codenumber">4.42</span><span class="period">.</span>
 </h3>
-<p>Prove that <span class="process-math">\(dim(E_\lambda) \geq 1\)</span> for every eigenvalue <span class="process-math">\(\lambda\text{.}\)</span></p></article><span class="incontext"><a href="section-18.html#investigation-150" class="internal">in-context</a></span>
+<p>Prove that <span class="process-math">\(dim(E_\lambda) \geq 1\)</span> for every eigenvalue <span class="process-math">\(\lambda\text{.}\)</span></p>
+<div class="solutions"><a href="" class="solution-knowl original" data-knowl="./knowl/solution-20-hidden.html" title="Solution 4.42.1"><span class="type">Solution</span><span class="period">.</span></a></div></article><span class="incontext"><a href="section-18.html#investigation-150" class="internal">in-context</a></span>
 </body>
 </html>
