--- a/knowl/p-568.html
+++ b/knowl/p-568.html
@@ -12,7 +12,8 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Prove that if <span class="process-math">\(\vec{v_1}\)</span> and <span class="process-math">\(\vec{v_2}\)</span> are eigenvectors of <span class="process-math">\(A\)</span> with the same eigenvalue, then <span class="process-math">\(\vec{v_1}+\vec{v_2}\)</span> is also an eigenvector of <span class="process-math">\(A\text{.}\)</span> What is the eigenvalue of <span class="process-math">\(\vec{v_1}+\vec{v_2}\text{?}\)</span></p>
+<p><span class="process-math">\((\Leftarrow)\)</span> If <span class="process-math">\(\vec{v}\in Null(A-\lambda Id)\text{,}\)</span> then <span class="process-math">\((A-\lambda Id)\vec{v} = 0\text{.}\)</span> Hence, <span class="process-math">\(A\vec{v}-\lambda
+\vec{v} = \vec{0}\text{,}\)</span> or <span class="process-math">\(A\vec{v} = \lambda\vec{v}\text{.}\)</span> Thus, <span class="process-math">\(\vec{v}\)</span> is an eigenvector of <span class="process-math">\(A\)</span> with eigenvalue <span class="process-math">\(\lambda\text{.}\)</span></p>
 <span class="incontext"><a href="section-18.html#p-568" class="internal">in-context</a></span>
 </body>
 </html>
