--- a/knowl/p-569.html
+++ b/knowl/p-569.html
@@ -12,8 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>If <span class="process-math">\(\lambda\)</span> is an eigenvalue of <span class="process-math">\(A\text{,}\)</span> then the <dfn class="terminology">eigenspace of <span class="process-math">\(\lambda\)</span></dfn>, <span class="process-math">\(E_\lambda\text{,}\)</span> is the set of vectors <span class="process-math">\(\vec{x}\)</span> such that <span class="process-math">\((A-\lambda
-Id_n)\vec{x}=\vec{0}\text{.}\)</span></p>
+<p>Prove that if <span class="process-math">\(\vec{v}\)</span> is an eigenvector of <span class="process-math">\(A\text{,}\)</span> then <span class="process-math">\(\alpha \vec{v}\)</span> is also an eigenvector of <span class="process-math">\(A\)</span> (when <span class="process-math">\(\alpha \neq 0\)</span>).</p>
 <span class="incontext"><a href="section-18.html#p-569" class="internal">in-context</a></span>
 </body>
 </html>
