--- a/knowl/p-571.html
+++ b/knowl/p-571.html
@@ -12,8 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>If <span class="process-math">\(\lambda\)</span> is an eigenvalue of <span class="process-math">\(A \in M_{n
-\times n}\text{,}\)</span> then <span class="process-math">\(E_\lambda\)</span> is a subspace of <span class="process-math">\(\mathbb{R}^n\text{.}\)</span></p>
+<p>Prove that if <span class="process-math">\(\vec{v_1}\)</span> and <span class="process-math">\(\vec{v_2}\)</span> are eigenvectors of <span class="process-math">\(A\)</span> with the same eigenvalue, then <span class="process-math">\(\vec{v_1}+\vec{v_2}\)</span> is also an eigenvector of <span class="process-math">\(A\text{.}\)</span> What is the eigenvalue of <span class="process-math">\(\vec{v_1}+\vec{v_2}\text{?}\)</span></p>
 <span class="incontext"><a href="section-18.html#p-571" class="internal">in-context</a></span>
 </body>
 </html>
