--- a/knowl/p-575.html
+++ b/knowl/p-575.html
@@ -11,8 +11,9 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>Can you pick <span class="process-math">\(a\text{,}\)</span> <span class="process-math">\(b\text{,}\)</span> and <span class="process-math">\(c\text{,}\)</span> so that the eigenspace of 2 has dimension 2? If so, give a choice of <span class="process-math">\(a\text{,}\)</span> <span class="process-math">\(b\text{,}\)</span> and <span class="process-math">\(c\)</span> that does so.</p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>If <span class="process-math">\(\lambda\)</span> is an eigenvalue of <span class="process-math">\(A \in M_{n
+\times n}\text{,}\)</span> then <span class="process-math">\(E_\lambda\)</span> is a subspace of <span class="process-math">\(\mathbb{R}^n\text{.}\)</span></p>
 <span class="incontext"><a href="section-18.html#p-575" class="internal">in-context</a></span>
 </body>
 </html>
