--- a/knowl/p-576.html
+++ b/knowl/p-576.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>Can you pick <span class="process-math">\(a\text{,}\)</span> <span class="process-math">\(b\text{,}\)</span> and <span class="process-math">\(c\text{,}\)</span> so that the eigenspace of 2 has dimension 1? If so, give a choice of <span class="process-math">\(a\text{,}\)</span> <span class="process-math">\(b\text{,}\)</span> and <span class="process-math">\(c\)</span> that does so.</p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>Prove that <span class="process-math">\(dim(E_\lambda) \geq 1\)</span> for every eigenvalue <span class="process-math">\(\lambda\text{.}\)</span></p>
 <span class="incontext"><a href="section-18.html#p-576" class="internal">in-context</a></span>
 </body>
 </html>
