--- a/knowl/p-578.html
+++ b/knowl/p-578.html
@@ -12,7 +12,8 @@
 </head>
 <body class="ignore-math">
 <h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>A matrix <span class="process-math">\(A \in M_{n \times n}\)</span> is diagonalizable iff <span class="process-math">\(A\)</span> has <span class="process-math">\(n\)</span> linearly independent eigenvectors. In fact, the matrix <span class="process-math">\(Q\)</span> that will diagonalize <span class="process-math">\(A\)</span> will have the <span class="process-math">\(n\)</span> linearly independent eigenvectors as its columns.</p>
+<p>Let <span class="process-math">\(A =\begin{bmatrix} 2 \amp a\amp
+b\\0\amp 2\amp c\\0\amp 0\amp 2 \end{bmatrix}\text{.}\)</span> Show that <span class="process-math">\(A\)</span> only has an eigenvalue of 2. What is the algebraic multiplicity of the eigenvalue 2?</p>
 <span class="incontext"><a href="section-18.html#p-578" class="internal">in-context</a></span>
 </body>
 </html>
