--- a/knowl/p-579.html
+++ b/knowl/p-579.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>The question becomes when can we find <span class="process-math">\(n\)</span> linearly independent eigenvectors for a matrix <span class="process-math">\(A\text{.}\)</span> It turns out that <em class="emphasis">if you can</em> find <span class="process-math">\(n\)</span> linearly independent eigenvectors for <span class="process-math">\(A\text{,}\)</span> then the matrix <span class="process-math">\(Q\)</span> has columns given by these eigenvectors and the diagonal matrix will have the eigenvalues on the diagonal. In particular, if the <span class="process-math">\(i\)</span>-th column of <span class="process-math">\(Q\)</span> has eigenvalue <span class="process-math">\(\lambda_i\text{,}\)</span> then <span class="process-math">\(D_{i,i} = \lambda_i\text{.}\)</span></p>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p>Can you pick <span class="process-math">\(a\text{,}\)</span> <span class="process-math">\(b\text{,}\)</span> and <span class="process-math">\(c\text{,}\)</span> so that the eigenspace of 2 has dimension 3? If so, give a choice of <span class="process-math">\(a\text{,}\)</span> <span class="process-math">\(b\text{,}\)</span> and <span class="process-math">\(c\)</span> that does so.</p>
 <span class="incontext"><a href="section-18.html#p-579" class="internal">in-context</a></span>
 </body>
 </html>
