--- a/knowl/p-583.html
+++ b/knowl/p-583.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>The following theorem relies on the preceding lemma and the fact that the dimension of every eigenspace is at least 1.</p>
+<p>We will not prove this theorem, but we will make use of it:</p>
 <span class="incontext"><a href="section-18.html#p-583" class="internal">in-context</a></span>
 </body>
 </html>
