--- a/knowl/p-587.html
+++ b/knowl/p-587.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>Give an example of a matrix that is not diagonalizable. Justify your claim.</p>
+<p>Can you diagonalize <span class="process-math">\(A=\begin{bmatrix} 1\amp -1\\1\amp 1 \end{bmatrix}\text{?}\)</span> If so, give a basis of eigenvectors, give corresponding choices for <span class="process-math">\(Q\text{,}\)</span> <span class="process-math">\(Q^{-1}\text{,}\)</span> and <span class="process-math">\(D\text{,}\)</span> then use these to demonstrate how <span class="process-math">\(A=QDQ^{-1}\text{.}\)</span></p>
 <span class="incontext"><a href="section-18.html#p-587" class="internal">in-context</a></span>
 </body>
 </html>
