--- a/knowl/p-588.html
+++ b/knowl/p-588.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>Let <span class="process-math">\(A\)</span> be a <span class="process-math">\(4\)</span> by <span class="process-math">\(4\)</span> matrix.</p>
+<p>If <span class="process-math">\(\vec{v_1}\)</span> is an eigenvector with eigenvalue <span class="process-math">\(\lambda_1\)</span> and <span class="process-math">\(\vec{v_2}\)</span> is an eigenvector with eigenvalue <span class="process-math">\(\lambda_2 \neq \lambda_1\text{,}\)</span> then <span class="process-math">\(\{ \vec{v_1},\vec{v_2} \}\)</span> is linearly independent.</p>
 <span class="incontext"><a href="section-18.html#p-588" class="internal">in-context</a></span>
 </body>
 </html>
