--- a/knowl/p-589.html
+++ b/knowl/p-589.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<p>How many eigenvalues can <span class="process-math">\(A\)</span> have?</p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>The following theorem relies on the preceding lemma and the fact that the dimension of every eigenspace is at least 1.</p>
 <span class="incontext"><a href="section-18.html#p-589" class="internal">in-context</a></span>
 </body>
 </html>
