--- a/knowl/p-590.html
+++ b/knowl/p-590.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<p>For each of the possible number of eigenvalues in the previous part, write out all of the possible dimensions of each of the eigenspaces. For instance: if <span class="process-math">\(A\)</span> has 4 distinct eigenvalues, then the only possibility is that each eigenspace has dimension 1 (why is that?).</p>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p>If a <span class="process-math">\(n\)</span> by <span class="process-math">\(n\)</span> matrix <span class="process-math">\(A\)</span> has <span class="process-math">\(n\)</span> distinct eigenvalues, then <span class="process-math">\(A\)</span> is diagonalizable.</p>
 <span class="incontext"><a href="section-18.html#p-590" class="internal">in-context</a></span>
 </body>
 </html>
