--- a/knowl/p-591.html
+++ b/knowl/p-591.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<p>Which of the cases from the previous problem correspond to <span class="process-math">\(A\)</span> being diagonalizable?</p>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p>The converse of this theorem is not true in that there diagonalizable matrices that do not have distinct eigenvalues. Give an example of a matrix that is diagonalizable but does not have distinct eigenvalues. Remember that diagonal matrices are diagonalizable.</p>
 <span class="incontext"><a href="section-18.html#p-591" class="internal">in-context</a></span>
 </body>
 </html>
