--- a/knowl/p-592.html
+++ b/knowl/p-592.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>Can you diagonalize <span class="process-math">\(A=\begin{bmatrix} -1\amp 2\\-2\amp 4 \end{bmatrix}\text{?}\)</span> If so, give a basis of eigenvectors, give corresponding choices for <span class="process-math">\(Q\text{,}\)</span> <span class="process-math">\(Q^{-1}\text{,}\)</span> and <span class="process-math">\(D\text{,}\)</span> then use these to demonstrate how <span class="process-math">\(A=QDQ^{-1}\text{.}\)</span></p>
-<span class="incontext"><a href="section-18.html#p-586" class="internal">in-context</a></span>
+<p>A <span class="process-math">\(n\)</span> by <span class="process-math">\(n\)</span> matrix <span class="process-math">\(A\)</span> is diagonalizable if and only if the sums of the dimensions of its eigenspaces is <span class="process-math">\(n\text{.}\)</span></p>
+<span class="incontext"><a href="section-18.html#p-592" class="internal">in-context</a></span>
 </body>
 </html>
