--- a/knowl/p-595.html
+++ b/knowl/p-595.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h3 class="heading"><span class="type">Paragraph</span></h3>
-<p>The previous two questions along with the inclusion of <span class="process-math">\(\vec{0}\)</span> have proved the following theorem.</p>
-<span class="incontext"><a href="section-18.html#p-574" class="internal">in-context</a></span>
+<h6 class="heading"><span class="type">Paragraph</span></h6>
+<p>How many eigenvalues can <span class="process-math">\(A\)</span> have?</p>
+<span class="incontext"><a href="section-18.html#p-595" class="internal">in-context</a></span>
 </body>
 </html>
