--- a/knowl/p-596.html
+++ b/knowl/p-596.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h3 class="heading"><span class="type">Paragraph</span></h3>
-<p>The previous two questions along with the inclusion of <span class="process-math">\(\vec{0}\)</span> have proved the following theorem.</p>
-<span class="incontext"><a href="section-18.html#p-574" class="internal">in-context</a></span>
+<h6 class="heading"><span class="type">Paragraph</span></h6>
+<p>For each of the possible number of eigenvalues in the previous part, write out all of the possible dimensions of each of the eigenspaces. For instance: if <span class="process-math">\(A\)</span> has 4 distinct eigenvalues, then the only possibility is that each eigenspace has dimension 1 (why is that?).</p>
+<span class="incontext"><a href="section-18.html#p-596" class="internal">in-context</a></span>
 </body>
 </html>
