--- a/knowl/p-598.html
+++ b/knowl/p-598.html
@@ -12,7 +12,8 @@
 </head>
 <body class="ignore-math">
 <h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>Can you diagonalize <span class="process-math">\(A=\begin{bmatrix} -1\amp 2\\-2\amp 4 \end{bmatrix}\text{?}\)</span> If so, give a basis of eigenvectors, give corresponding choices for <span class="process-math">\(Q\text{,}\)</span> <span class="process-math">\(Q^{-1}\text{,}\)</span> and <span class="process-math">\(D\text{,}\)</span> then use these to demonstrate how <span class="process-math">\(A=QDQ^{-1}\text{.}\)</span></p>
-<span class="incontext"><a href="section-18.html#p-586" class="internal">in-context</a></span>
+<p>Let <span class="process-math">\(A=\begin{bmatrix} 7 \amp -5 \amp 25\\ 10 \amp -8 \amp
+35\\ 0 \amp 0 \amp -1\end{bmatrix}\text{.}\)</span> Diagonalize <span class="process-math">\(A\)</span> and use your diagonalization to compute <span class="process-math">\(A^{10}\text{.}\)</span></p>
+<span class="incontext"><a href="section-18.html#p-598" class="internal">in-context</a></span>
 </body>
 </html>
