--- a/knowl/solution-17.html
+++ b/knowl/solution-17.html
@@ -11,11 +11,17 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
+<div class="solution solution-like">
+<h3 class="heading">
+<span class="type">Solution</span><span class="space"> </span><span class="codenumber">4.39.1</span><span class="period">.</span>
+</h3>
 <p><span class="process-math">\((\Rightarrow)\)</span> If <span class="process-math">\(\vec{v}\)</span> is an eigenvector of <span class="process-math">\(A\)</span> with eigenvalue <span class="process-math">\(\lambda\text{,}\)</span> then <span class="process-math">\(A\vec{v} =
 \lambda\vec{v}\text{.}\)</span> By algebra, this means that <span class="process-math">\(A\vec{v} -
 \lambda\vec{v} = \vec{0}\text{,}\)</span> and hence <span class="process-math">\((A-\lambda
 Id)\vec{v}=\vec{0}\text{.}\)</span> Thus, <span class="process-math">\(\vec{v}\)</span> is in the null space of <span class="process-math">\(A-\lambda Id\text{.}\)</span></p>
-<span class="incontext"><a href="section-18.html#p-567" class="internal">in-context</a></span>
+<p><span class="process-math">\((\Leftarrow)\)</span> If <span class="process-math">\(\vec{v}\in Null(A-\lambda Id)\text{,}\)</span> then <span class="process-math">\((A-\lambda Id)\vec{v} = 0\text{.}\)</span> Hence, <span class="process-math">\(A\vec{v}-\lambda
+\vec{v} = \vec{0}\text{,}\)</span> or <span class="process-math">\(A\vec{v} = \lambda\vec{v}\text{.}\)</span> Thus, <span class="process-math">\(\vec{v}\)</span> is an eigenvector of <span class="process-math">\(A\)</span> with eigenvalue <span class="process-math">\(\lambda\text{.}\)</span></p>
+</div>
+<span class="incontext"><a href="section-18.html#solution-17" class="internal">in-context</a></span>
 </body>
 </html>
