--- a/knowl/solution-18-hidden.html
+++ b/knowl/solution-18-hidden.html
@@ -10,8 +10,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="robots" content="noindex, nofollow">
 </head>
-<body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
+<body class="ignore-math"><div class="solution solution-like">
 <p>Since <span class="process-math">\(\vec{v}\)</span> is an eigenvector of <span class="process-math">\(A\text{,}\)</span> there is a scalar <span class="process-math">\(\lambda\)</span> such that <span class="process-math">\(A\vec{v} = \lambda
 \vec{v}\text{.}\)</span> By properties of matrix multiplication, we thus have</p>
 <div class="displaymath process-math" data-contains-math-knowls="">
@@ -21,6 +20,5 @@ A(\alpha\vec{v}) = \alpha A\vec{v} = \alpha\lambda\vec{v} =
 \end{equation*}
 </div>
 <p class="continuation">As <span class="process-math">\(\alpha\neq 0\text{,}\)</span> this shows that <span class="process-math">\(\alpha\vec{v}\)</span> is an eigenvector with the same eigenvalue.</p>
-<span class="incontext"><a href="section-18.html#p-570" class="internal">in-context</a></span>
-</body>
+</div></body>
 </html>
