--- a/knowl/solution-18.html
+++ b/knowl/solution-18.html
@@ -11,7 +11,10 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
+<div class="solution solution-like">
+<h3 class="heading">
+<span class="type">Solution</span><span class="space"> </span><span class="codenumber">4.40.1</span><span class="period">.</span>
+</h3>
 <p>Since <span class="process-math">\(\vec{v}\)</span> is an eigenvector of <span class="process-math">\(A\text{,}\)</span> there is a scalar <span class="process-math">\(\lambda\)</span> such that <span class="process-math">\(A\vec{v} = \lambda
 \vec{v}\text{.}\)</span> By properties of matrix multiplication, we thus have</p>
 <div class="displaymath process-math" data-contains-math-knowls="">
@@ -21,6 +24,7 @@ A(\alpha\vec{v}) = \alpha A\vec{v} = \alpha\lambda\vec{v} =
 \end{equation*}
 </div>
 <p class="continuation">As <span class="process-math">\(\alpha\neq 0\text{,}\)</span> this shows that <span class="process-math">\(\alpha\vec{v}\)</span> is an eigenvector with the same eigenvalue.</p>
-<span class="incontext"><a href="section-18.html#p-570" class="internal">in-context</a></span>
+</div>
+<span class="incontext"><a href="section-18.html#solution-18" class="internal">in-context</a></span>
 </body>
 </html>
