--- a/knowl/solution-19.html
+++ b/knowl/solution-19.html
@@ -11,7 +11,10 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
+<div class="solution solution-like">
+<h3 class="heading">
+<span class="type">Solution</span><span class="space"> </span><span class="codenumber">4.41.1</span><span class="period">.</span>
+</h3>
 <p>Let <span class="process-math">\(\lambda\)</span> be the associated eigenvalue. We have that <span class="process-math">\(A\vec{v}_1 = \lambda\vec{v}_1\)</span> and <span class="process-math">\(A\vec{v}_2 =
 \lambda\vec{v}_2\text{.}\)</span> Thus, we have</p>
 <div class="displaymath process-math" data-contains-math-knowls="">
@@ -23,6 +26,7 @@ A\vec{v}_1 + A\vec{v}_2 = \lambda\vec{v}_1 + \lambda\vec{v}_2 =
 </div>
 <p class="continuation">Therefore, <span class="process-math">\(\vec{v}_1 +
 \vec{v}_2\)</span> is an eigenvector with the same eigenvalue.</p>
-<span class="incontext"><a href="section-18.html#p-572" class="internal">in-context</a></span>
+</div>
+<span class="incontext"><a href="section-18.html#solution-19" class="internal">in-context</a></span>
 </body>
 </html>
