--- a/knowl/solution-20.html
+++ b/knowl/solution-20.html
@@ -11,9 +11,13 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
+<div class="solution solution-like">
+<h3 class="heading">
+<span class="type">Solution</span><span class="space"> </span><span class="codenumber">4.42.1</span><span class="period">.</span>
+</h3>
 <p>We prove this by contradiction. Suppose that there is an eigenspace with dimension <span class="process-math">\(0\text{.}\)</span> Then <span class="process-math">\(E_\lambda =
 \{\vec{0}\}\text{,}\)</span> since this is the only vector space of dimension <span class="process-math">\(0\text{.}\)</span> However, we now see that <span class="process-math">\(E_\lambda\)</span> does not contain any nonzero vectors, and thus cannot contain any eigenvectors and therefore is not an eigenspace.</p>
-<span class="incontext"><a href="section-18.html#p-577" class="internal">in-context</a></span>
+</div>
+<span class="incontext"><a href="section-18.html#solution-20" class="internal">in-context</a></span>
 </body>
 </html>
